# teddo-timeout

./: .gitignore  Dockerfile  README.md  publish.sh  pyproject.toml  test.sh
src/teddo_timeout/: __init__.py  main.py
